fixed layout bug

--- a/client/src/styles/Desktop/HomeDesktop.scss
+++ b/client/src/styles/Desktop/HomeDesktop.scss
@@ -1,3 +1,5 @@
+
+
 .home-desktop {
     position: relative;
     height: 100%;
@@ -30,6 +32,7 @@
             flex: 1;
             height: 100%;
             width: 100%;
+            border: 1px solid peru;
 
             
             video{
@@ -42,6 +45,7 @@
             margin-top: 7rem;
             width: 100%;
             display: flex;
+            border: 1px solid blue;
 
             .empty-scroll{
                 flex: 1;
@@ -52,15 +56,19 @@
                 position: fixed;
                 flex: 1;
                 width: 100%;
+                height: calc(100vh - 7rem);
+                border: 1px solid green;
+
 
                 .home-welcome{
                     position: absolute;
-                    top: 25%; left: 10%;
+                    top: 5%; left: 10%;
                     z-index: 10;
                     font-size: 6rem;
                     font-family: reckless-1;
                     color: $white;
-                    
+                    border: 1px solid purple;
+
                     span{
                         margin-top: -5%;
                         display: block;
@@ -71,7 +79,8 @@
 
                 .stats-container{
                     position: absolute;
-                    bottom: 25%; left: 10%;
+                    top: 75%; left: 10%;
+                    z-index: 10;
                     border: 1px solid salmon;
                 }
             
